--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             <br/>
     
             <p class='vertAlignBottom labeler'>Rating: 
-              <input type='radio' id='option1' value='false' name='stars' />
+              <input type='radio' id='option1' value='1' name='stars' />
               <label for='option1' class='vertAlignBottom'>1</label>
-              <input type='radio' id='option2' value='false' name='stars' />
+              <input type='radio' id='option2' value='2' name='stars' />
               <label for='option2' class='vertAlignBottom'>2</label>
-              <input type='radio' id='option3' value='false' name='stars' />
+              <input type='radio' id='option3' value='3' name='stars' />
               <label for='option3' class='vertAlignBottom'>3</label>
-              <input type='radio' id='option4' value='false' name='stars' />
+              <input type='radio' id='option4' value='4' name='stars' />
               <label for='option4' class='vertAlignBottom'>4</label>
-              <input type='radio' id='option5' value='false' name='stars' />
+              <input type='radio' id='option5' value='5' name='stars' />
               <label for='option5' class='vertAlignBottom'>5</label>
             </p>
         
@@ -96,7 +96,9 @@
 
   <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js'></script>
   <script type="text/javascript" src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
+  <script type="text/javascript" src='scripts/api.js'></script>
   <script type="text/javascript" src='scripts/store.js'></script>
+  <script type="text/javascript" src='scripts/bookmarks.js'></script>
   <script type="text/javascript" src='scripts/index.js'></script>
 
 </body>
