all functions written out but not all working

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <option value=2>2+</option>
           <option value=3>3+</option>
           <option value=4>4+</option>
-          <option value=5>5+</option>
+          <option value=5>5</option>
         </select> 
       </form>
       <div id='addNewBookmark'>
@@ -61,10 +61,7 @@
 
   </header>
   <main>
-    <p id='infoLine'>
-      There are currently no bookmarks.<br/>
-      OR: Your current bookmarks:
-    </p>
+    <p id='infoLine'>There are currently no bookmarks.</p>
 
     <div id='viewBookmarks'>
     </div>
