--- a/mockup.html
+++ b/mockup.html
@@ -21,7 +21,7 @@
           <option value=2>2+</option>
           <option value=3>3+</option>
           <option value=4>4+</option>
-          <option value=5>5+</option>
+          <option value=5>5</option>
         </select> 
       </form>
       <div id='addNewBookmark'>
@@ -59,10 +59,7 @@
     
   </header>
   <main>
-    <p id='infoLine'>
-      There are currently no bookmarks.<br/>
-      OR: Your current bookmarks:
-    </p>
+    <p id='infoLine'>There are currently no bookmarks.</p>
 
     <div id='viewBookmarks'>
         <header class='boxHeader'><h3>Bookmark1 <span class='stars'> &#9733; &#9733; &#9733;</span><span class='arrowpointers'> &#9662;&#9652;</span></h3></header>
@@ -105,7 +102,9 @@
 
   <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js'></script>
   <script type="text/javascript" src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
+  <script type="text/javascript" src='scripts/api.js'></script>
   <script type="text/javascript" src='scripts/store.js'></script>
+  <script type="text/javascript" src='scripts/bookmarks.js'></script>
   <script type="text/javascript" src='scripts/index.js'></script>
 
 </body>
