--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form id='filterForm'>
         <label for='filter'>Filter by rating: </label>
         <select id='filter' name='filter'>
-          <option value="all">ALL</option>
+          <option value="1">ALL</option>
           <option value=1>1+</option>
           <option value=2>2+</option>
           <option value=3>3+</option>
